解除 显示其他队伍状态 PVP禁用的限制

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -254,7 +254,7 @@ setting.rtsWoundUnit.name = [acid]Unit Filter [white]: Low Health Threshold
 setting.save_more_map.name = [acid]Save Campaign and Editor Maps
 setting.showFlyerSpawn.name = [cyan]Air Force Spawn Points
 setting.showFlyerSpawnLine.name = [cyan]Air Force Spawn Point Lines
-setting.showOtherTeamState.name = [acid]Show [white]: [red]Other and Modify Team Status [yellow][Modification Single Player Only]
+setting.showOtherTeamState.name = [acid]Show [white]: [red]Other and Modify Team Status
 setting.showTurretAmmo.name = [acid]Turret [white]: Ammo Type
 setting.showTurretAmmoAmount.name = [acid]Turret [white]: Ammo Amount
 setting.superUnitEffect.name = [pink]Player Effect Range
