--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -13,6 +13,7 @@ mods.recommend.mod.lastUpdated = Last Updated\: {0}
 mods.recommend.mod.stars = Github Stars\: {0}
 alphaLoading = {jump}[gray]Loading...
 alphaLoadFailed = {sick}[gray]Load Failed...
+commit.recentUpdates=Recent Updates
 commit.title = Commits
 commit.justNow = just now
 commit.minutesAgo = {0} minutes ago
