📝 清理学术颜色使用 ✨ 直接更多Buff属性显示

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -148,7 +148,7 @@ settingV2.collectMetrics.name = Anonymous Metrics Collection
 settingV2.collectMetrics.description = Collects crash logs/environment info anonymously\nto help developers improve the game
 
 settingV2.arcExtra.category = ARC - Extended Features
-settingV2.arcExtra.colorizedContent.name = [orange]Color[yellow]ized[acid] Attri[cyan]bute[violet] Packs
+settingV2.arcExtra.colorizedContent.name = Use colored item names [grey] — may reduce readability
 settingV2.arcExtra.backgroundPath.name = Home - Custom Background Path
 settingV2.arcExtra.backgroundPath.description = Full path required
 settingV2.arcExtra.radarMode.name = Radar Scan Speed
@@ -241,56 +241,56 @@ category.movement = Movement
 category.support = Support
 content.planet.name = Planet
 content.weather.name = Weather
-revealedblocks = [acid]Show Buildings
-rules.aiCoreSpawn = [acid]Core Spawn AI
-rules.canGameOver = [acid]Can Auto End Game[gray](Not recommended if there are no other ways to end the game)
-rules.cheat = [acid]Cheat Mode
-rules.coreDestroyClear = [acid]Clear Nearby Buildings on Core Destruction
-rules.disableOutsideArea = [acid]Disable Outside Area
+revealedblocks = Show Buildings
+rules.aiCoreSpawn = Core Spawn AI
+rules.canGameOver = Can Auto End Game[gray](Not recommended if there are no other ways to end the game)
+rules.cheat = Cheat Mode
+rules.coreDestroyClear = Clear Nearby Buildings on Core Destruction
+rules.disableOutsideArea = Disable Outside Area
 rules.dynamicColor = Fog of War Color - Explored
-rules.hiddenBuildItems = [acid]Hide Buildings Requiring Selected Materials
-rules.infiniteAmmo = [acid]Units Infinite Ammo
-rules.logicUnitBuild = [acid]Logic Control Unit Construction
+rules.hiddenBuildItems = Hide Buildings Requiring Selected Materials
+rules.infiniteAmmo = Units Infinite Ammo
+rules.logicUnitBuild = Logic Control Unit Construction
 rules.staticColor = Fog of War Color - Unexplored
 rules.title.arcExperimental = Hidden Settings[red](Experimental, may affect stability)
-rules.unitPayloadUpdate = [acid]Units Carrying Blocks Will Work
-rules.winWave = [acid]Victory Wave  [gray](Automatically stops after reaching specified wave)
+rules.unitPayloadUpdate = Units Carrying Blocks Will Work
+rules.winWave = Victory Wave  [gray](Automatically stops after reaching specified wave)
 schematic.preview = Preview
-setting.alwaysShowUnitRTSAi.name = [acid]Units[white]: Executing RTS Commands
-setting.arcAlwaysTeamColor.name = [acid]Player List[white]: Always Draw Team Colors
+setting.alwaysShowUnitRTSAi.name = Units: Executing RTS Commands
+setting.arcAlwaysTeamColor.name = Player List: Always Draw Team Colors
 setting.arcBuildInfo.name = [cyan]Build Range
-setting.arcdrillmode.name = [acid]Drill[white]: Always Show Minerals
-setting.blockBars.name = [acid]Building Attributes
-setting.blockBars_mend.name = [acid]Repair[white]: Progress Bar
-setting.blockWeaponTargetLine.name = [acid]Turret[white]: Target Line
-setting.blockWeaponTargetLineWhenIdle.name = [acid]Turret[white]: Target Line (Idle)
-setting.blockdisabled.name = [cyan]Building Disable Display
-setting.hoveredTileInfo.name = [acid]Show Mouse Pointer Tile/Building Name
+setting.arcdrillmode.name = Drill: Always Show Minerals
+setting.blockBars.name = Building Attributes
+setting.blockBars_mend.name = Repair: Progress Bar
+setting.blockWeaponTargetLine.name = Turret: Target Line
+setting.blockWeaponTargetLineWhenIdle.name = Turret: Target Line (Idle)
+setting.blockdisabled.name = Always show building disabled status
+setting.hoveredTileInfo.name = Show Mouse Pointer Tile/Building Name
 setting.mass_driver_line.name = Show Mass Driver Guide Line
-setting.mass_driver_line_color.name = [pink]Mass Driver Guide Line[white]: Color
-setting.mass_driver_line_interval.name = [acid]Mass Driver Guide Line[white]: Arrow Interval
-setting.overrideSkipWave.name = [acid]Function[white]: Ignore Skip Wave Limit
-setting.playerEffectColor.name = [acid]Player Range[white]: Color
-setting.playerEffectCurStroke.name = [acid]Player Range[white]: Thickness
+setting.mass_driver_line_color.name = [pink]Mass Driver Guide Line: Color
+setting.mass_driver_line_interval.name = Mass Driver Guide Line: Arrow Interval
+setting.overrideSkipWave.name = Function: Ignore Skip Wave Limit
+setting.playerEffectColor.name = Player Range: Color
+setting.playerEffectCurStroke.name = Player Range: Thickness
 setting.playerNeedShooting.name = [red]Time Management Master
-setting.rtsWoundUnit.name = [acid]Unit Filter[white]: Low Health Threshold
-setting.save_more_map.name = [acid]Save Campaign and Editor Maps
-setting.showTurretAmmo.name = [acid]Turret[white]: Ammo Type
-setting.showTurretAmmoAmount.name = [acid]Turret[white]: Ammo Amount
+setting.rtsWoundUnit.name = Unit Filter: Low Health Threshold
+setting.save_more_map.name = Save Campaign and Editor Maps
+setting.showTurretAmmo.name = Turret: Ammo Type
+setting.showTurretAmmoAmount.name = Turret: Ammo Amount
 setting.superUnitEffect.name = [pink]Player Effect Range
-setting.turretAlertRange.name = [acid]Turret[white]: Alert Range
-setting.turretForceShowRange.name = [acid]Turret[white]: Force Show Range  [gray]Can be used to show range in editor
-setting.turretShowRange.name = [acid]Turret[white]: Range
-setting.unitHealthBar.name = [acid]Unit Attributes
-setting.unitItemCarried.name = [acid]Unit Carried Items
-setting.unitLogicMoveLine.name = [acid]Control[white]: Move Path
-setting.unitLogicTimerBars.name = [acid]Control[white]: Timer Bars
+setting.turretAlertRange.name = Turret: Alert Range
+setting.turretForceShowRange.name = Turret: Force Show Range  [gray]Can be used to show range in editor
+setting.turretShowRange.name = Turret: Range
+setting.unitHealthBar.name = Unit Attributes
+setting.unitItemCarried.name = Unit Carried Items
+setting.unitLogicMoveLine.name = Control: Move Path
+setting.unitLogicTimerBars.name = Control: Timer Bars
 setting.unitTargetType.name = [pink]Player Target Style
-setting.unitWeaponRange.name = [acid]Unit Weapon Range[white]: Range Warning
-setting.unitWeaponRangeAlpha.name = [acid]Unit Weapon Range[white]: Opacity
-setting.unitWeaponTargetLine.name = [acid]Unit Weapon Target
-setting.unitbuildplan.name = [acid]Unit[white]: Build Sequence Display
-settings.arc = [cyan]ARC Settings
+setting.unitWeaponRange.name = Unit Weapon Range: Range Warning
+setting.unitWeaponRangeAlpha.name = Unit Weapon Range: Opacity
+setting.unitWeaponTargetLine.name = Unit Weapon Target
+setting.unitbuildplan.name = Unit: Build Sequence Display
+settings.arc = ARC Settings
 settings.maxMsgRecorded.name = Max Chat Records
 shield.phaseboost = [stat]+{0}[lightgray] Grid [stat]+{1}[] Shield Capacity
 shield.regenspeed = [stat]{0}[lightgray]x Regen Speed
