--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -82,8 +82,6 @@ settingV2.autoFill.fillStorageBlock.name = Allow Fill into Container/Vault
 settingV2.autoFill.fillDistribution.name = Allow Fill into Plastanium Conveyor/Bridge
 
 settingV2.coreItems.category = Team Resource Display
-settingV2.coreItems.enable.name = Master Toggle
-settingV2.coreItems.columns.name = Columns
 settingV2.coreItems.showItem.name = Show Core Items
 settingV2.coreItems.showUnit.name = Show Unit Count
 settingV2.coreItems.showPlan.name = Show Building Count
@@ -116,7 +114,6 @@ settingV2.entityRender.payloadPreview.name = Payload Pickup Preview
 settingV2.gameUI.category = Game UI
 settingV2.gameUI.spawnerWaveDisplay.name = Spawn Point Wave Info Display
 settingV2.gameUI.transportScan.name = Transport Scan Mode
-settingV2.gameUI.newWaveInfoDisplay.name = New Wave Display (Upper Middle)
 settingV2.gameUI.menuFloatText.name = Home Floating Text
 settingV2.gameUI.announceRtsTake.name = Notify When Controlled Unit Taken by Others
 settingV2.gameUI.deadOverlay.name = Show UI While Dead/Spectating [orange]May Crash
@@ -181,6 +178,8 @@ settingV2.overlayUI.quickTool.name = Quick Settings
 settingV2.overlayUI.mappingTool.name = Mapping Toolbox
 settingV2.overlayUI.advanceBuildTool.name = Batch Build Tool
 settingV2.overlayUI.teamsStats.name = Multi-team Resource Display
+settingV2.overlayUI.coreItems.name = Team Resource Display
+settingV2.overlayUI.waveInfo.name = New Wave Info Display
 
 settingV2.debug.category = Special Settings (Unstable)
 settingV2.debug.renderSort.name = Render Sorting
