--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -73,6 +73,7 @@ stat.ammo_capacity = Ammo Capacity
 #SettingsV2
 settings.category.settingV2 = [gold]MindustryX
 settingV2.reset = [red]Reset to Default
+settingV2.onlyModified = Only show modified settings
 
 settingV2.autoFill.category = Quick Fill
 settingV2.autoFill.cooldown.name = Operation Cooldown (ms)
