--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -128,7 +128,7 @@ settingV2.gameUI.researchViewer.name = Tech Tree Viewer
 settingV2.gameUI.extendedCommandTable.name = RTS Extension Buttons
 settingV2.gameUI.overlayButton.name = OverlayUI Button [grey]PC recommended shortcut: Z
 
-settingV2.blockInventoryWidth.name = Items per Row in Block Inventory (Sorter)
+settingV2.additionInventoryColumns.name = Additional building inventory and item configuration columns
 settingV2.minimapSize.name = Minimap Size
 settingV2.staticShieldsBorder.name = Static Shield Border
 settingV2.allUnlocked.name = Show All Content (Including Hidden)
