--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -180,6 +180,7 @@ settingV2.overlayUI.advanceBuildTool.name = Batch Build Tool
 settingV2.overlayUI.teamsStats.name = Multi-team Resource Display
 settingV2.overlayUI.coreItems.name = Team Resource Display
 settingV2.overlayUI.waveInfo.name = New Wave Info Display
+settingV2.overlayUI.controlGroup.name = RTS Control Group
 
 settingV2.debug.category = Special Settings (Unstable)
 settingV2.debug.renderSort.name = Render Sorting
