✨ 新的独立的 标记与分享 面板

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -181,6 +181,7 @@ settingV2.overlayUI.teamsStats.name = Multi-team Resource Display
 settingV2.overlayUI.coreItems.name = Team Resource Display
 settingV2.overlayUI.waveInfo.name = New Wave Info Display
 settingV2.overlayUI.controlGroup.name = RTS Control Group
+settingV2.overlayUI.markAndShare.name = Mark and Share
 
 settingV2.debug.category = Special Settings (Unstable)
 settingV2.debug.renderSort.name = Render Sorting
