--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -26,8 +26,8 @@ mdtx.share.unit = {0}: Count {1}, Limit {2}
 commit.recentUpdates = Recent Updates
 commit.title = Commits
 
-overlayUI.tips = [gold]Tips:[]\n1. Default PC shortcut is Z, you can change it in settings.\n2. After locking the panel, it can be displayed in-game.\n3. Not all panels need to be locked, the left switch can be used as a collapse button.\n4. After locking, the content area remains unchanged, and will snap to the edge.
-
+overlayUI.tips = [gold]Tips:[]\n1. Default PC shortcut is Z, you can change it in settings.\n2. After locking the panel, it can be displayed in-game.\n3. Not all panels need to be locked, the left switch can be used as a collapse button.\n4. After locking, the content area remains unchanged, and will snap to the edge.\n5. On mobile, you can adjust zoom in window settings, information display can be abbreviated, buttons can be enlarged.
+forceJoin.tips = [gold]MDTX[]: The target version may be compatible, you can choose to disguise the version to force join.\nIf [red]network error[] or other problems occur, it means incompatible.\n\nTIPS: Backward compatibility (v146-current version) is an MDTX exclusive feature.
 #end UI
 
 status.slow.name = Slow
@@ -38,6 +38,11 @@ status.invincible.name = Invincible
 status.fast.name = Fast
 
 #StatExt
+category.combat = Combat
+category.moreContent.name = More Content Adaptation
+category.movement = Movement
+category.support = Support
+
 stat.can_overdrive = Can Overdrive
 stat.cost = Build Time Cost
 stat.health_scaling = Building Health Scaling
@@ -127,6 +132,7 @@ settingV2.gameUI.extendedCommandTable.name = RTS Extension Buttons
 settingV2.gameUI.overlayButton.name = OverlayUI Button [grey]PC recommended shortcut: Z
 
 settingV2.additionInventoryColumns.name = Additional building inventory and item configuration columns
+settingV2.additionInventoryColumns.description = Involves core item bar, building item bar and item configuration bar, editor block bar, etc.
 settingV2.minimapSize.name = Minimap Size
 settingV2.staticShieldsBorder.name = Static Shield Border
 settingV2.allUnlocked.name = Show All Content (Including Hidden)
@@ -140,7 +146,11 @@ settingV2.replayRecord.description = Automatically records gameplay, output in s
 settingV2.maxSchematicSize.name = Max Selection (Schematic) Size
 settingV2.autoSelectSchematic.name = Auto Schematic Select      [gray]Auto-filters when opening schematics
 settingV2.collectMetrics.name = Anonymous Metrics Collection
-settingV2.collectMetrics.description = Collects crash logs/environment info anonymously\nto help developers improve the game
+settingV2.collectMetrics.description = Anonymously collect crash logs, runtime environment and other information\nTo help developers improve the game
+settingV2.worldCreator.name = World Creator
+settingV2.worldCreator.description = Ignore restrictions, able to place and remove any blocks
+settingV2.terrainSchematic.name = Terrain Schematic
+settingV2.terrainSchematic.description = Allow copying terrain, walls, etc. into schematics, can be pasted with World Creator.
 
 settingV2.arcExtra.category = ARC - Extended Features
 settingV2.arcExtra.colorizedContent.name = Use colored item names [grey] — may reduce readability
@@ -207,11 +217,12 @@ bar.reloadDetail = Reload: {0}%
 bar.warmupDetail = Warmup: {0}%
 bar.ammoDetail = Ammo: {0}/{1}
 
+
 marker.Mark.name = Mark
 marker.Gather.name = Gather
 marker.Attack.name = Attack
 marker.Defend.name = Defend
-marker.What.name = Question
+marker.What.name = What
 
 keybind.point.name = Mark
 keybind.lockonLastMark.name = Lock on Last Mark
@@ -220,10 +231,8 @@ keybind.toggle_unit.name = Toggle Unit Display
 keybind.focusLogicController.name = Lock to Controlled Processor
 keybind.placeRouterReplacement.name = Quick Replace Conveyor (Router/Bridge)
 
-# ARC增加或补充
-ability.moveeffect = Move Effect
-bar.drillcantmine = Current drill cannot mine this mineral
-block.fracture.name = Fracture
+
+# ARC设置
 category.arcAddTurretInfo.name = More Turret Attributes
 category.arcAddUnitInfo.name = More Unit Attributes
 category.arcCDisplayBlock.name = Building Display
@@ -233,42 +242,22 @@ category.arcCgameview.name = Game View
 category.arcCgamewindow.name = Game Interface
 category.arcMassDriverInfo.name = Mass Driver Guide Line
 category.arcPlayerEffect.name = Player Cool Effects
-category.arcWeakCheat.name = Weak Cheat Functions
-category.combat = Combat
-category.moreContent.name = More Content Adaptation
-category.movement = Movement
-category.support = Support
-content.planet.name = Planet
-content.weather.name = Weather
-revealedblocks = Show Buildings
-rules.aiCoreSpawn = Core Spawn AI
-rules.canGameOver = Can Auto End Game[gray](Not recommended if there are no other ways to end the game)
-rules.cheat = Cheat Mode
-rules.coreDestroyClear = Clear Nearby Buildings on Core Destruction
-rules.disableOutsideArea = Disable Outside Area
-rules.dynamicColor = Fog of War Color - Explored
-rules.hiddenBuildItems = Hide Buildings Requiring Selected Materials
-rules.infiniteAmmo = Units Infinite Ammo
-rules.logicUnitBuild = Logic Control Unit Construction
-rules.staticColor = Fog of War Color - Unexplored
-rules.title.arcExperimental = Hidden Settings[red](Experimental, may affect stability)
-rules.unitPayloadUpdate = Units Carrying Blocks Will Work
-rules.winWave = Victory Wave  [gray](Automatically stops after reaching specified wave)
-schematic.preview = Preview
-setting.alwaysShowUnitRTSAi.name = Units: Executing RTS Commands
+category.arcWeakCheat.name = Weak Cheat Features
+
+setting.alwaysShowUnitRTSAi.name = Units: Executed RTS Commands
 setting.arcAlwaysTeamColor.name = Player List: Always Draw Team Colors
 setting.arcBuildInfo.name = [cyan]Build Range
-setting.arcdrillmode.name = Drill: Always Show Minerals
+setting.arcdrillmode.name = Drill: Always Bright Minerals
 setting.blockBars.name = Building Attributes
 setting.blockBars_mend.name = Repair: Progress Bar
-setting.blockWeaponTargetLine.name = Turret: Target Line
-setting.blockWeaponTargetLineWhenIdle.name = Turret: Target Line (Idle)
-setting.blockdisabled.name = Always show building disabled status
-setting.hoveredTileInfo.name = Show Mouse Pointer Tile/Building Name
+setting.blockWeaponTargetLine.name = Turret: Targeting Line
+setting.blockWeaponTargetLineWhenIdle.name = Turret: Targeting Line (Idle)
+setting.blockdisabled.name = Always Show Building Disabled State
+setting.hoveredTileInfo.name = Show Hovered Tile/Building Name
 setting.mass_driver_line.name = Show Mass Driver Guide Line
 setting.mass_driver_line_color.name = [pink]Mass Driver Guide Line: Color
 setting.mass_driver_line_interval.name = Mass Driver Guide Line: Arrow Interval
-setting.overrideSkipWave.name = Function: Ignore Skip Wave Limit
+setting.overrideSkipWave.name = Feature: Ignore Skip Wave Limit
 setting.playerEffectColor.name = Player Range: Color
 setting.playerEffectCurStroke.name = Player Range: Thickness
 setting.playerNeedShooting.name = [red]Time Management Master
@@ -276,30 +265,47 @@ setting.rtsWoundUnit.name = Unit Filter: Low Health Threshold
 setting.save_more_map.name = Save Campaign and Editor Maps
 setting.showTurretAmmo.name = Turret: Ammo Type
 setting.showTurretAmmoAmount.name = Turret: Ammo Amount
-setting.superUnitEffect.name = [pink]Player Effect Range
+setting.superUnitEffect.name = [pink]Player Special Effect Range
 setting.turretAlertRange.name = Turret: Alert Range
-setting.turretForceShowRange.name = Turret: Force Show Range  [gray]Can be used to show range in editor
+setting.turretForceShowRange.name = Turret: Force Show Range [gray]Can be used to show range in editor
 setting.turretShowRange.name = Turret: Range
 setting.unitHealthBar.name = Unit Attributes
 setting.unitItemCarried.name = Unit Carried Items
-setting.unitLogicMoveLine.name = Control: Move Path
-setting.unitLogicTimerBars.name = Control: Timer Bars
-setting.unitTargetType.name = [pink]Player Target Style
+setting.unitLogicMoveLine.name = Logic Control: Movement Path
+setting.unitLogicTimerBars.name = Logic Control: Timer Bars
+setting.unitTargetType.name = [pink]Player's Target Style
 setting.unitWeaponRange.name = Unit Weapon Range: Range Warning
 setting.unitWeaponRangeAlpha.name = Unit Weapon Range: Opacity
 setting.unitWeaponTargetLine.name = Unit Weapon Target
-setting.unitbuildplan.name = Unit: Build Sequence Display
-settings.arc = ARC Settings
-settings.maxMsgRecorded.name = Max Chat Records
-shield.phaseboost = [stat]+{0}[lightgray] Grid [stat]+{1}[] Shield Capacity
-shield.regenspeed = [stat]{0}[lightgray]x Regen Speed
-team.neoplastic.name = Neoplastic
+setting.unitbuildplan.name = Units: Build Sequence Display
+settings.arc = Academic Features
+
+# ARC增加
+bar.drillcantmine = Current drill cannot mine this mineral
+revealedblocks = Revealed Blocks
+rules.aiCoreSpawn = AI Core Spawn
+rules.canGameOver = Can Game Over [gray](If there are no other ways to end the game, not recommended to enable)
+rules.cheat = Cheat Mode (Infinite Firepower)
+rules.coreDestroyClear = Core Destroy Clear Nearby Buildings
+rules.disableOutsideArea = Disable Outside Area
+rules.dynamicColor = Fog of War Color - Explored Area [gold]X[]
+rules.infiniteAmmo = Infinite Unit Ammo [gray](Not recommended to disable)
+rules.staticColor = Fog of War Color - Unexplored Area [gold]X[]
+rules.title.arcExperimental = Hidden Settings [red](Experimental features, may affect stability)
+rules.unitPayloadUpdate = Unit Payload Update
+rules.winWave = Win Wave [gold]X[] [gray](Automatically stops after reaching the specified wave)
+schematic.preview = Preview
+settings.maxMsgRecorded.name = Maximum Recorded Messages
+shield.phaseboost = [stat]+{0}[lightgray] cells [stat]+{1}[] shield capacity
+shield.regenspeed = [stat]{0}[lightgray]x regeneration speed
+
+# 原版额外内容
+content.planet.name = Planet
+content.weather.name = Weather
 unit.anthicus-missile.name = Anthicus Missile
 unit.disrupt-missile.name = Disrupt Missile
 unit.quell-missile.name = Quell Missile
 unit.scathe-missile.name = Scathe Missile
-waves.duplicate = Duplicate
-waves.group = Group
-waves.group.effect = Add Status Effects
-waves.group.items = Add Items
-waves.group.payloads = Add Payloads
+team.neoplastic.name = Neoplastic
+
+# 学术特色翻译(无需翻译其他语言)
