--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -431,7 +431,7 @@ mdtx.stat.lightningLength = [stat]{0}[] length
 # 学术特色翻译(无需翻译其他语言)
 
 # hardcoded ui texts extracted from source
-mdtx.ui.records_n =  records:\n
+mdtx.ui.records_n = records:\n
 
 mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = The currently selected area is empty, please use F to plan the area.
 mdtx.ui.sync_a_wave = Sync a wave
@@ -458,7 +458,7 @@ mdtx.ui.air_only = Air only
 mdtx.ui.logic_notice = Logic~Notice
 mdtx.ui.share_wave_information = Share wave information
 mdtx.ui.name = Name
-mdtx.ui.wave_in_prefix =  in 
+mdtx.ui.wave_in_prefix = in
 mdtx.ui.warning_image_may_be_too_large_please_try_compressing_image = [orange] Warning: Image may be too large, please try compressing image
 mdtx.ui.all_players = All players
 mdtx.ui.icon = Icon
@@ -591,7 +591,7 @@ mdtx.ui.arg_arg_ndistance_arg = @,@\nDistance: @
 mdtx.ui.successfully_selected_a_total_of = Successfully selected a total of
 mdtx.ui.pixel_art = pixel art
 mdtx.ui.terrain_blueprint = terrain blueprint
-mdtx.ui.each_cell_absorbs_arg_s_arg_arg_arg_s_and_returns_blood_maximum_arg_s = Each cell absorbs @/s@@~@/s and returns blood~maximum @/s
+mdtx.ui.each_cell_absorbs_arg_s_arg_arg_arg_s_and_returns_blood_maximum_arg_s = Each cell absorbs @/s@@~heals @/s~up to @/s
 mdtx.ui.attack_speed = [violet]Attack speed
 mdtx.ui.toggle_your_team_s_cheat = Toggle your team's Cheat
 mdtx.ui.generate_quantity = Generate quantity:
@@ -749,8 +749,9 @@ mdtx.ui.paused = Paused
 mdtx.ui.hourglass = Hourglass:
 mdtx.ui.blueprint_code_link = Blueprint code link:
 mdtx.ui.template.atPlayer = <AT> poked {0}[white] and asked them to check the message dialog.
-mdtx.ui.template.atNoticeFrom = [gold]You were [white]{0}[gold] poked; check the message dialog~
+mdtx.ui.template.atNoticeFrom = [gold]You were [white]{0}[gold] poked; check the message dialog.
 mdtx.ui.template.currentVersion = Current version: {0}
+mdtx.ui.template.introduction = Introduction: {0}
 mdtx.ui.template.exportCount = Successfully selected a total of {0} records:\n
 mdtx.ui.template.exportHeader = [MDTX-{0}] Exported in-game chat history
 mdtx.ui.template.exportMap = *** Current map name: {0} (mode: {1})\n
