♻️ i18n 去除空格依赖并改为模板拼接

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -506,7 +506,7 @@ mdtx.ui.refresh_interval = Refresh interval
 mdtx.ui.export_chat_history = Export chat history
 mdtx.ui.scan_mode = Scan Mode
 mdtx.ui.arc_ai_configurator = ARC-AI Configurator
-mdtx.ui.generated_label_2 = Now 
+mdtx.ui.generated_label_2 = Now
 mdtx.ui.resistance = [purple]Resistance
 mdtx.ui.load_unit = Load Unit
 mdtx.ui.unit_factory = Unit Factory
@@ -575,7 +575,7 @@ mdtx.ui.saved_to_clipboard = Saved to clipboard
 mdtx.ui.recording_arg = Recording: @
 mdtx.ui.there_are_too_many_buildings_to_avoid_lag_and_only_keep_the_first_1000_plans = [yellow]There are too many buildings to avoid lag and only keep the first 1000 plans.
 mdtx.ui.load_building = Load Building
-mdtx.ui.generated_label = Now 
+mdtx.ui.generated_label = Now
 mdtx.ui.canvas = Canvas
 mdtx.ui.unlimited = Unlimited
 mdtx.ui.buildings = Buildings:
@@ -716,7 +716,7 @@ mdtx.ui.could_not_check_for_updates_nplease_try_again_later = Could not check fo
 mdtx.ui.open_release_page = Open Release Page
 mdtx.ui.rules = Rules:
 mdtx.ui.replay_creation_time = Replay creation time:
-mdtx.ui.share_log_n =  share log\n
+mdtx.ui.share_log_n = share log\n
 
 mdtx.ui.sec = sec
 mdtx.ui.copied_this_chat_record = Copied this chat record
@@ -730,7 +730,7 @@ mdtx.ui.share_power_status = Share power status
 mdtx.ui.copied_memory_n = [cyan]Copied memory[white]\n
 mdtx.ui.logic_art_website = Logic art website
 mdtx.ui.contains_ground_x = Contains (ground x
-mdtx.ui.waves_suffix =  waves, 
+mdtx.ui.waves_suffix = waves,
 mdtx.ui.god_mode = God Mode
 mdtx.ui.single_player_map_tools_only = Single-player map tools only.
 mdtx.ui.spawn_location = Spawn location:
@@ -750,19 +750,26 @@ mdtx.ui.hourglass = Hourglass:
 mdtx.ui.blueprint_code_link = Blueprint code link:
 mdtx.ui.template.atPlayer = <AT> poked {0}[white] and asked them to check the message dialog.
 mdtx.ui.template.atNoticeFrom = [gold]You were [white]{0}[gold] poked; check the message dialog.
+mdtx.ui.template.copiedMemory = [cyan]Copied memory[white]\n {0}
 mdtx.ui.template.currentVersion = Current version: {0}
+mdtx.ui.template.currentWave = *** Current wave: {0}
 mdtx.ui.template.introduction = Introduction: {0}
+mdtx.ui.template.failedReadImage = Failed to read image, please try another image\n{0}
 mdtx.ui.template.exportCount = Successfully selected a total of {0} records:\n
 mdtx.ui.template.exportHeader = [MDTX-{0}] Exported in-game chat history
+mdtx.ui.template.labelWithEmoji = {0} {1}
+mdtx.ui.template.loadMap = Load map: {0}
 mdtx.ui.template.exportMap = *** Current map name: {0} (mode: {1})\n
 mdtx.ui.template.itemSelectionHeight = {0} rows
 mdtx.ui.template.itemSelectionWidth = {0} columns
 mdtx.ui.template.javaWarnDialog = Java version {0} is too low and unsupported.\n[grey]This warning cannot be disabled; please update Java.
 mdtx.ui.template.javaWarnLog = Java version {0} is too low and unsupported. Please use Java 17+ to run MindustryX.
 mdtx.ui.template.newVersion = [green]New version found[]: {0}
+mdtx.ui.template.windowTitle = MindustryX | Version {0} | mods enabled {1}/{2}
 mdtx.ui.template.shareHeader = This is a share log from MDTX-{0}\n
 mdtx.ui.template.shareCode = <ARCxMDTX><Schem>[black]compat code[] {0}
 mdtx.ui.template.toggleState = {0}: {1}
+mdtx.ui.template.waveEvent = Waves: {0} | {1}
 mdtx.ui.template.waveContains = Contains (ground x{0}, air x{1}):
 mdtx.ui.template.waveEta = (in {0} waves, {1})
 mdtx.ui.template.waveTitle = Wave {0}
