♻️ i18n 清理冗余键并统一模板格式

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -431,15 +431,11 @@ mdtx.stat.lightningLength = [stat]{0}[] length
 # 学术特色翻译(无需翻译其他语言)
 
 # hardcoded ui texts extracted from source
-mdtx.ui.records_n = records:\n
-
 mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = The currently selected area is empty, please use F to plan the area.
 mdtx.ui.sync_a_wave = Sync a wave
 mdtx.ui.miner_ai_ore_filter = Miner AI - Ore Filter
 mdtx.ui.blueprint_code_n = Blueprint code: \n
-mdtx.ui.mode = (mode:
 mdtx.ui.copied_print_buffer_n_arg = Copied print buffer\n@
-mdtx.ui.invalid_background_image = Invalid background image:
 mdtx.ui.message_center = Message Center
 mdtx.ui.lock = Lock
 mdtx.ui.event_map_load = Event~Map Load
@@ -459,7 +455,7 @@ mdtx.ui.logic_notice = Logic~Notice
 mdtx.ui.share_wave_information = Share wave information
 mdtx.ui.name = Name
 mdtx.ui.wave_in_prefix = in
-mdtx.ui.warning_image_may_be_too_large_please_try_compressing_image = [orange] Warning: Image may be too large, please try compressing image
+mdtx.ui.warning_image_may_be_too_large_please_try_compressing_image = [orange]Warning: Image may be too large, please try compressing image
 mdtx.ui.all_players = All players
 mdtx.ui.icon = Icon
 mdtx.ui.bullet_rendering = Bullet Rendering
@@ -471,7 +467,6 @@ mdtx.ui.please_use_java_17_or_higher_to_run_mindustryx = ). Please use Java 17 o
 mdtx.ui.player_name = Player name:
 mdtx.ui.randomly_generated_within_this_range_near_the_target_point = Randomly generated within this range near the target point
 mdtx.ui.on = On
-mdtx.ui.introduction = Introduction:
 mdtx.ui.slow_the_flow_of_time_to_half = Slow the flow of time to half
 mdtx.ui.ore_info = Ore Info
 mdtx.ui.shortcut_fog = F
@@ -498,7 +493,7 @@ mdtx.ui.flash_on_change = Flash on Change
 mdtx.ui.show_all = Show all
 mdtx.ui.reset = Reset
 mdtx.ui.shortcut_server_info = V
-mdtx.ui.shield = [yellow] Shield:
+mdtx.ui.shield = [yellow]Shield:
 mdtx.ui.spawn_range = Spawn range:
 mdtx.ui.click_the_screen_to_return = [green]Click the screen to return
 mdtx.ui.team_id = Team ID:
@@ -506,12 +501,10 @@ mdtx.ui.refresh_interval = Refresh interval
 mdtx.ui.export_chat_history = Export chat history
 mdtx.ui.scan_mode = Scan Mode
 mdtx.ui.arc_ai_configurator = ARC-AI Configurator
-mdtx.ui.generated_label_2 = Now
 mdtx.ui.resistance = [purple]Resistance
 mdtx.ui.load_unit = Load Unit
 mdtx.ui.unit_factory = Unit Factory
 mdtx.ui.tiles = tiles
-mdtx.ui.you_were = [gold]You were [white]
 mdtx.ui.zoom_zoom = Zoom: 
 mdtx.ui.automatically_refresh_variables = Automatically refresh variables
 mdtx.ui.fog_of_war = Fog of War
@@ -522,7 +515,6 @@ mdtx.ui.arg_shield_capacity_arg_grid_arg_recovery_arg_s_cooldown = @ shield capa
 mdtx.ui.staging_area = Staging area
 mdtx.ui.there_are_no_enemies_in_this_wave = There are no enemies in this wave
 mdtx.ui.shortcut_surrender_vote = [white]S
-mdtx.ui.current_wave = *** Current wave:
 mdtx.ui.construction_suspended = Construction suspended
 mdtx.ui.waves = Waves:
 mdtx.ui.hide_all_buildings = Hide all buildings
@@ -638,7 +630,7 @@ mdtx.ui.unlock_and_allow_all_blocks = Unlock and allow all blocks
 mdtx.ui.arg_s_arg_tiles = @s~@ tiles
 mdtx.ui.load_map = Load map:
 mdtx.ui.placeholder_x = x
-mdtx.ui.spawned = [orange] spawned!
+mdtx.ui.spawned = [orange]spawned!
 mdtx.ui.below_is_mdtx = Below is [MDTX-
 mdtx.ui.team_selector = Team selector
 mdtx.ui.mark_mode_tap_the_screen_to_place_a_mark = [cyan]Mark mode: tap the screen to place a mark.
@@ -664,7 +656,7 @@ mdtx.ui.select_code = Select Code
 mdtx.ui.tap_the_screen_to_capture_coordinates = [green]Tap the screen to capture coordinates
 mdtx.ui.this_is_a_message_from_mdtx = This is a message from MDTX-
 mdtx.ui.add_team = Add Team
-mdtx.ui.before_adding_new_instructions_please_save_the_edited_instructions_first = [yellow] Before adding new instructions, please save the edited instructions first.
+mdtx.ui.before_adding_new_instructions_please_save_the_edited_instructions_first = [yellow]Before adding new instructions, please save the edited instructions first.
 mdtx.ui.you_were_poked_please_pay_attention_to_the_information_box = [orange]You were poked, please pay attention to the information box~
 mdtx.ui.global_range = Global range
 mdtx.ui.no_permission_to_edit_view_only = [yellow]No permission to edit; view only.
@@ -685,7 +677,6 @@ mdtx.ui.share_unit_count = Share unit count
 mdtx.ui.upload_failed_try_again = Upload failed, try again?
 mdtx.ui.kotlin_language_standard_library = Kotlin language standard library
 mdtx.ui.ring = Ring
-mdtx.ui.saved_blueprint = Saved blueprint:
 mdtx.ui.command_mode = Command Mode
 mdtx.ui.force_boost = Force Boost
 mdtx.ui.permanent_status = <Permanent Status>
@@ -716,8 +707,6 @@ mdtx.ui.could_not_check_for_updates_nplease_try_again_later = Could not check fo
 mdtx.ui.open_release_page = Open Release Page
 mdtx.ui.rules = Rules:
 mdtx.ui.replay_creation_time = Replay creation time:
-mdtx.ui.share_log_n = share log\n
-
 mdtx.ui.sec = sec
 mdtx.ui.copied_this_chat_record = Copied this chat record
 mdtx.ui.wall_shadow_rendering = Wall Shadow Rendering
@@ -727,7 +716,6 @@ mdtx.ui.total_arg_arg_arg_arg_tile_radius = Total @@@~@ tile radius
 mdtx.ui.frame_rate_lock_mode_turned_off_ncurrent_game_speed_arg_times = Frame rate lock mode turned off \nCurrent game speed: @ times
 mdtx.ui.spawn_team = Spawn Team:
 mdtx.ui.share_power_status = Share power status
-mdtx.ui.copied_memory_n = [cyan]Copied memory[white]\n
 mdtx.ui.logic_art_website = Logic art website
 mdtx.ui.contains_ground_x = Contains (ground x
 mdtx.ui.waves_suffix = waves,
@@ -755,6 +743,7 @@ mdtx.ui.template.currentVersion = Current version: {0}
 mdtx.ui.template.currentWave = *** Current wave: {0}
 mdtx.ui.template.introduction = Introduction: {0}
 mdtx.ui.template.failedReadImage = Failed to read image, please try another image\n{0}
+mdtx.ui.template.invalidBackgroundImage = Invalid background image: {0}
 mdtx.ui.template.exportCount = Successfully selected a total of {0} records:\n
 mdtx.ui.template.exportHeader = [MDTX-{0}] Exported in-game chat history
 mdtx.ui.template.labelWithEmoji = {0} {1}
@@ -765,6 +754,7 @@ mdtx.ui.template.itemSelectionWidth = {0} columns
 mdtx.ui.template.javaWarnDialog = Java version {0} is too low and unsupported.\n[grey]This warning cannot be disabled; please update Java.
 mdtx.ui.template.javaWarnLog = Java version {0} is too low and unsupported. Please use Java 17+ to run MindustryX.
 mdtx.ui.template.newVersion = [green]New version found[]: {0}
+mdtx.ui.template.savedBlueprint = Saved blueprint: {0}
 mdtx.ui.template.windowTitle = MindustryX | Version {0} | mods enabled {1}/{2}
 mdtx.ui.template.shareHeader = This is a share log from MDTX-{0}\n
 mdtx.ui.template.shareCode = <ARCxMDTX><Schem>[black]compat code[] {0}
