♻️ i18n 清理旧键并语义化部分UI文案键

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -428,10 +428,10 @@ mdtx.stat.lightningDamage = Lightning~[stat]{0}[] dmg~
 mdtx.stat.lightningLengthRange = [stat]{0}~{1}[] length
 mdtx.stat.lightningLength = [stat]{0}[] length
 
-# 学术特色翻译(无需翻译其他语言)
+# Stylized translations (no need to localize in other languages)
 
 # hardcoded ui texts extracted from source
-mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = The currently selected area is empty, please use F to plan the area.
+mdtx.ui.empty_selection_area_hint = The currently selected area is empty. Please use F to plan the area.
 mdtx.ui.sync_a_wave = Sync a wave
 mdtx.ui.miner_ai_ore_filter = Miner AI - Ore Filter
 mdtx.ui.blueprint_code_n = Blueprint code: \n
@@ -440,7 +440,7 @@ mdtx.ui.message_center = Message Center
 mdtx.ui.lock = Lock
 mdtx.ui.event_map_load = Event~Map Load
 mdtx.ui.logic_helper_x = Logic Helper[gold]X[]
-mdtx.ui.if_you_can_t_stand_it_anymore_just_surrender = If you can't stand it anymore, just surrender?
+mdtx.ui.surrender_vote_confirm = If you can't stand it anymore, just surrender?
 mdtx.ui.shortcut_observer_mode = O
 mdtx.ui.original_size = Original size
 mdtx.ui.current_unit_cannot_build = [red]Current unit cannot build
@@ -463,7 +463,6 @@ mdtx.ui.failed_to_read_image_please_try_another_image_n = Failed to read image, 
 mdtx.ui.mark_player = Mark~Player
 mdtx.ui.chat_history_exceeding_the_limit_will_be_cleared_when_loading_the_map = Chat history exceeding the limit will be cleared when loading the map
 mdtx.ui.wave = Wave
-mdtx.ui.please_use_java_17_or_higher_to_run_mindustryx = ). Please use Java 17 or higher to run MindustryX.
 mdtx.ui.player_name = Player name:
 mdtx.ui.randomly_generated_within_this_range_near_the_target_point = Randomly generated within this range near the target point
 mdtx.ui.on = On
@@ -529,7 +528,6 @@ mdtx.ui.recording_ended = Recording ended
 mdtx.ui.chat = Chat
 mdtx.ui.team_range = Team range
 mdtx.ui.wave_info = Wave Info
-mdtx.ui.the_java_version_is_too_low_and_not_supported = The Java version is too low and not supported (
 mdtx.ui.defender_ai = Defender AI
 mdtx.ui.recording_error = Recording error!
 mdtx.ui.show_building_status_only = Show building status only
