🌐 i18n 优化 poke 提示英文文案

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -655,7 +655,7 @@ mdtx.ui.tap_the_screen_to_capture_coordinates = [green]Tap the screen to capture
 mdtx.ui.this_is_a_message_from_mdtx = This is a message from MDTX-
 mdtx.ui.add_team = Add Team
 mdtx.ui.before_adding_new_instructions_please_save_the_edited_instructions_first = [yellow]Before adding new instructions, please save the edited instructions first.
-mdtx.ui.you_were_poked_please_pay_attention_to_the_information_box = [orange]You were poked, please pay attention to the information box~
+mdtx.ui.you_were_poked_please_pay_attention_to_the_information_box = [orange]You were poked. Please check the message dialog.
 mdtx.ui.global_range = Global range
 mdtx.ui.no_permission_to_edit_view_only = [yellow]No permission to edit; view only.
 mdtx.ui.cross = Cross
