🌐 i18n 优化AT提示英文措辞

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -734,8 +734,8 @@ mdtx.ui.find_blocks = Find blocks
 mdtx.ui.paused = Paused
 mdtx.ui.hourglass = Hourglass:
 mdtx.ui.blueprint_code_link = Blueprint code link:
-mdtx.ui.template.atPlayer = <AT> poked {0}[white] and asked them to check the message dialog.
-mdtx.ui.template.atNoticeFrom = [gold]You were [white]{0}[gold] poked; check the message dialog.
+mdtx.ui.template.atPlayer = <AT> poked {0}[white] to check their messages.
+mdtx.ui.template.atNoticeFrom = [gold]You were poked by [white]{0}[gold]! Check the message dialog.
 mdtx.ui.template.copiedMemory = [cyan]Copied memory[white]\n {0}
 mdtx.ui.template.currentVersion = Current version: {0}
 mdtx.ui.template.currentWave = *** Current wave: {0}
