🌐 i18n 调整 poke 英文提示主语

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -615,7 +615,7 @@ mdtx.ui.set_target_wave = Set target wave
 mdtx.ui.path = Path
 mdtx.ui.ui_icon_library = UI Icon Library
 mdtx.ui.mods_enabled = | mods enabled
-mdtx.ui.poked_you_check_the_message_dialog = [gold] poked you; check the message dialog~
+mdtx.ui.poked_you_check_the_message_dialog = [gold]You were poked; check the message dialog.
 mdtx.ui.this_is_a_cheat_feature_njump_to_the = [red]This is a cheat feature[]\nJump to the target wave instantly (without spawning enemies)
 mdtx.ui.current_frame_rate_locked_arg = Current frame rate locked: @
 mdtx.ui.failed_to_read_playback = Failed to read playback!
