🌐 i18n 优化部分英文文案一致性

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -440,7 +440,7 @@ mdtx.ui.message_center = Message Center
 mdtx.ui.lock = Lock
 mdtx.ui.event_map_load = Event~Map Load
 mdtx.ui.logic_helper_x = Logic Helper[gold]X[]
-mdtx.ui.surrender_vote_confirm = If you can't stand it anymore, just surrender?
+mdtx.ui.surrender_vote_confirm = Are you sure you want to surrender?
 mdtx.ui.shortcut_observer_mode = O
 mdtx.ui.original_size = Original size
 mdtx.ui.current_unit_cannot_build = [red]Current unit cannot build
@@ -565,7 +565,7 @@ mdtx.ui.saved_to_clipboard = Saved to clipboard
 mdtx.ui.recording_arg = Recording: @
 mdtx.ui.there_are_too_many_buildings_to_avoid_lag_and_only_keep_the_first_1000_plans = [yellow]There are too many buildings to avoid lag and only keep the first 1000 plans.
 mdtx.ui.load_building = Load Building
-mdtx.ui.generated_label = Now
+mdtx.ui.generated_label = Generated
 mdtx.ui.canvas = Canvas
 mdtx.ui.unlimited = Unlimited
 mdtx.ui.buildings = Buildings:
@@ -579,8 +579,8 @@ mdtx.ui.pause_time = Pause time
 mdtx.ui.restore_current_wave = Restore current wave
 mdtx.ui.arg_arg_ndistance_arg = @,@\nDistance: @
 mdtx.ui.successfully_selected_a_total_of = Successfully selected a total of
-mdtx.ui.pixel_art = pixel art
-mdtx.ui.terrain_blueprint = terrain blueprint
+mdtx.ui.pixel_art = Pixel Art
+mdtx.ui.terrain_blueprint = Terrain Blueprint
 mdtx.ui.each_cell_absorbs_arg_s_arg_arg_arg_s_and_returns_blood_maximum_arg_s = Each cell absorbs @/s@@~heals @/s~up to @/s
 mdtx.ui.attack_speed = [violet]Attack speed
 mdtx.ui.toggle_your_team_s_cheat = Toggle your team's Cheat
