✨ 重制GitHub加速：代理重试与资源缓存

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -127,6 +127,13 @@ settingV2.arcTurretPlaceCheck.name = Show No-Build Zones When Placing Turrets
 settingV2.arcTurretPlacementItem.name = Show Different Ammo Ranges for Turrets
 settingV2.githubMirror.name = GitHub Mirror Acceleration (WZ Mirror)
 settingV2.githubMirror.description = Optimizes global server list and mod browser functions
+settingV2.githubAcceleration.category = GH Acceleration
+settingV2.githubAcceleration.enabled.name = Enable GitHub Acceleration
+settingV2.githubAcceleration.enabled.description = Proxy GitHub requests with automatic retries
+settingV2.githubAcceleration.cache.name = Enable Static Asset Cache
+settingV2.githubAcceleration.cacheExpire.name = Cache Expiration
+settingV2.githubAcceleration.maxRetries.name = Max Attempts
+settingV2.githubAcceleration.proxies.name = Proxy List
 settingV2.replayRecord.name = Multiplayer Recording
 settingV2.replayRecord.description = Automatically records gameplay, output in saves folder\nRecording files may be large, remember to clean up
 settingV2.maxSchematicSize.name = Max Selection (Schematic) Size
